--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hono/zod-openapi": "^0.19.1",
     "hono": "^4.7.2",
     "next": "14.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
