--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dev": "next dev -p 3003",
     "build": "next build",
     "start": "next start -p 3003",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@hono/zod-openapi": "^0.19.1",
@@ -15,9 +16,12 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.6",
     "typescript": "^5"
   }
 }
