--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@hono/zod-openapi": "^0.19.1",
+    "@hono/zod-validator": "^0.4.3",
     "hono": "^4.7.2",
     "next": "14.2.5",
     "react": "18.2.0",
