--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "@hono/zod-validator": "^0.4.3",
     "hono": "^4.7.2",
+    "hono-openapi": "^0.4.6",
     "next": "14.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zod-openapi": "^4.2.3"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
